--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-site-verification" content="W_RJ9COb6zt36nIh3LrgbTq6MR5CfYyrtdBZiO101cU" />
     <meta
       name="description"
       content="BIDMC - Division of Digital Psychiatry"
