Update title, description. Add keywords.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="google-site-verification" content="W_RJ9COb6zt36nIh3LrgbTq6MR5CfYyrtdBZiO101cU" />
     <meta
       name="description"
-      content="BIDMC - Division of Digital Psychiatry"
+      content="MIND is an interactive database that helps anyone find mental health and brain apps that meet the unique preference and needs for each unique individual.  Search apps across privacy, cost (including free), evidence, engagement, and many other categories to learn which apps offer the right combination of features for the right person at the right time.  mental health apps, therapy app, depression apps, free apps, anxiety apps, stress apps, psych app, psychiatry apps"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>BIDMC - Division of Digital Psychiatry</title>
+    <title>Mobile Health Index and Navigation Database, App Evaluation Resources from the Division of Digital Psychiatry at BIDMC</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
